# vulkangpe

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compileEverything.sh  main.cpp  test.hlsl  trace.json  uh.spv  vkhelpers.cpp  vkhelpers.hpp
include/: GPEsim.hpp  hack.hpp  mathhelpers.hpp  vkhelpers.hpp
shaders/: buffertest.comp  finalstep.comp  kstep.comp  rstep.comp  step.comp  test.comp  uhh.comp  viridis.glsl
src/: GPEsim.cpp  main.cpp  vkhelpers.cpp
